TG-202 Folders for files
Added api controller to get folder structure for root folder
